update model of ToDo
